xidlc/tests/invalid/http_client_stream_path_param.idl
#pragma xidlc package xidlc
#pragma xidlc version v1.0.0

interface InvalidClientStreamPathService {
    @client_stream
    @stream_codec("ndjson")
    @post(path = "/uploads/{bucket}")
    string upload(
        @path @rename("bucket") string bucket,
        sequence<octet> chunk
    );
};
